--- a/package.json
+++ b/package.json
@@ -4,13 +4,24 @@
   "private": true,
   "homepage": "https://TaniaMudryk.github.io/goit-react-hw-05-movies/",
   "dependencies": {
+    "@misonou/react-dom-client": "^1.0.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "axios": "^1.3.6",
+    "modern-normalize": "^1.1.0",
+    "normalize-css": "^2.3.1",
+    "normalize.css": "^8.0.1",
+    "notiflix": "^3.2.6",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.3"
+    "styled-components": "^5.3.9",
+    "web-vitals": "^2.1.3",
+    "webpack": "^5.80.0"
   },
   "scripts": {
     "start": "react-scripts start",
